base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msh-kustomize-clusterip
spec:
  selector:
    app: msh
  ports:
  - protocol: TCP
    name: msh-kustomize-port
    port: 80
    targetPort: 8080
  type: ClusterIP
