base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msh
  labels:
    app: msh
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "chart-example.local"
    secretName: chart-example-tls
  rules:
  - host: "chart-example.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: msh-kustomize-clusterip
            port:
              name: msh-kustomize-port
